@@ -28,7 +28,6 @@ import org.ttrssreader.utils.Utils;
 import android.app.ListActivity;
 import android.content.Intent;
 import android.os.Bundle;
-import android.util.DisplayMetrics;
 import android.util.Log;
 import android.view.ContextMenu;
 import android.view.Menu;
@@ -62,7 +61,7 @@ public abstract class MenuActivity extends ListActivity implements IUpdateEndLis
         
         // Initialize Singletons for Config, Data-Access and DB
         Controller.getInstance().checkAndInitializeController(this);
-        Controller.initializeArticleViewStuff(getWindowManager().getDefaultDisplay(), new DisplayMetrics());
+        Controller.refreshDisplayMetrics(getWindowManager().getDefaultDisplay());
         DBHelper.getInstance().checkAndInitializeDB(this);
         Data.getInstance().checkAndInitializeData(this);
         Controller.getInstance().registerActivity(this);
@@ -226,7 +225,8 @@ public abstract class MenuActivity extends ListActivity implements IUpdateEndLis
         if (isCacherRunning()) {
             if (!onlyArticles) // Tell cacher to do images too
                 ForegroundService.loadImagesToo();
-            else // Running and already caching images, no need to do anything
+            else
+                // Running and already caching images, no need to do anything
                 return;
         }
         
